Header con avatar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="icon" href="imagenes/mysteryico.ico">
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	<link rel="stylesheet" type="text/css" href="css/animacion.css">
 
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCgfWgC9uTVgRAlPydkyTeifTotcatlgxc"
