--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
   	<script SRC="bower_components/ui-bootstrap/ui-bootstrap-tpls-2.3.1.min.js" type="text/javascript"></script>
   	<script src="bower_components/angular-file-upload/dist/angular-file-upload.min.js"></script>
   	<script SRC="bower_components/satellizer/dist/satellizer.min.js" TYPE="text/javascript"></script>
+  	<script SRC="bower_components/jquery/dist/jquery.min.js" TYPE="text/javascript"></script>
   	<script src="bower_components/highcharts/highcharts.js"></script>
   	<script src="bower_components/highcharts/modules/exporting.js"></script>
  	<script SRC="js/app.js" TYPE="text/javascript"></script>
+
   	<!-- <script type="text/javascript" src="js/tabla.js"></script> -->
   	<script type="text/javascript" src="js/directivas/ngThumb.js"></script>
 
